<resources>
    <string name="app_name">Spotify Streamer</string>
    <string name="action_clear_history">Clear search history</string>
    <string name="search_hint">Search artists on Spotify</string>
    <string name="connection_error">Can\'t connect to Spotify</string>
    <string name="empty_image">Placeholder image for album</string>
    <string name="image_of_artist">Image of \ </string>
    <string name="image_of_album">Image of album \ </string>
    <string name="no_artist_found">No artist found. Please refine your search</string>
    <string name="no_track_found">No tracks available</string>
    <string name="title_activity_top_tracks">Top Tracks</string>
    <string name="same_artist">Search not changed</string>
    <string name="button_play">Play button</string>
    <string name="button_pause">Pause button</string>
    <string name="button_previous">Previous button</string>
    <string name="button_next">Next button</string>
    <string name="share_text">Share track</string>

    <string name="TAG_PLAY" translatable="false" >TAG_PLAY</string>
    <string name="TAG_PAUSE" translatable="false" >TAG_PAUSE</string>

</resources>
