<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="me.lehrner.spotifystreamer.PlayerActivityFragment">

  <!--  <Switch
        android:id="@+id/player_toggle_autoplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="Autoplay"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />-->

    <TextView
        android:id="@+id/player_artist_name"
        android:singleLine="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/player_text_size"/>

    <TextView
        android:id="@+id/player_album_name"
        android:singleLine="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/player_album_text_size"
        android:layout_below="@id/player_artist_name"/>

    <ImageView
        android:id="@+id/player_image_view"
        android:layout_centerHorizontal="true"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:src="@drawable/vinyl"
        android:contentDescription="@string/empty_image"
        android:layout_below="@id/player_album_name"
        android:layout_above="@+id/player_track_name"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/player_track_name"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/player_text_size"
        android:layout_above="@+id/player_time_progress"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/player_image_previous"
        android:layout_width="@dimen/player_button_size"
        android:layout_height="@dimen/player_button_size"
        android:src="@drawable/ic_skip_previous_black_48dp"
        android:contentDescription="@string/button_previous"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="buttonPrevNext"
        style="?android:attr/borderlessButtonStyle"/>

    <ImageButton
        android:id="@+id/player_image_play"
        android:layout_width="@dimen/player_button_size"
        android:layout_height="@dimen/player_button_size"
        android:src="@drawable/ic_pause_black_48dp"
        android:tag="@string/TAG_PAUSE"
        android:contentDescription="@string/button_play"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:onClick="buttonPlay"
        style="?android:attr/borderlessButtonStyle"/>

    <ImageButton
        android:id="@+id/player_image_next"
        android:layout_width="@dimen/player_button_size"
        android:layout_height="@dimen/player_button_size"
        android:src="@drawable/ic_skip_next_black_48dp"
        android:contentDescription="@string/button_next"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:onClick="buttonPrevNext"
        style="?android:attr/borderlessButtonStyle"/>

    <TextView
        android:id="@+id/player_time_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/player_text_size"
        android:layout_above="@id/player_image_previous"/>

    <TextView
        android:id="@+id/player_time_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/player_text_size"
        android:layout_above="@id/player_image_next"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <SeekBar android:id="@+id/player_time_progress"
        android:indeterminate="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/player_time_start" />

</RelativeLayout>
